styles.css
body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    overflow-x: hidden;
    background: #ebf6f5;
    font-family: sans-serif;
}

button {
    cursor: pointer;
    border: none;
    padding: 20px 46px;
    font-size: 20.8px;
    border-radius: 2px;
    font-family: monospace, sans-serif;
    color: #000;
}

input {
    padding: 17px 3px 17px 9px;
    max-width: calc(100% - 15px);
    font-size: 20.8px;
    font-family: monospace, sans-serif;
}

header, main, footer {
    width: 70%;
    margin: 0 auto;
}

/* FUNCTIONAL SELECTORS */
.show-info {
    background-color: white;
    position: relative;
}

.info {
    margin: 6px;
    opacity: 0;
    position: absolute;
    top: -999999999px;
}

.info-visible {
    opacity: 1;
    top: unset;
    position: unset;
}

/* GENERAL STYLES */
.green-btn {
    background: #62c7c3;
    transition: background 0.25s;
    box-shadow: black 2px 2px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.green-btn:active {
    box-shadow: black 4px 4px;
    background: #5cbdb9;
    position: relative;
    left: 2px;
}

.black-btn {
    background: white;
    color: black;
    font-size: 18px;
    padding: 12px;
    text-align: center;
    border: 2px solid black;
    transition: border-color 0.19s ease-in;
}

.black-btn:hover {
    border: 2px solid grey;
    transition: border-color 0.19s ease-in;
}

.flex-center {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.small-description {
    font-size: 16px;
}

/* HEADER */
header {
    background: #fff;
    border: 2px solid black;
    border-bottom-color: transparent;
    padding: 6px 14px 6px 14px;
    flex-wrap: wrap-reverse;
}

header #points {
    gap: 7px;
    font-weight: 600;
    background: lightgray;
    padding: 12px 34px;
}

/* MAIN */
main {
    min-height: 100vh;
    border: 2px solid black;
    background: #fff;
    padding: 12px 14px 0 14px;
    display: flex; 
    flex-direction: column;
}

.top .show-info .buttons {
    display: flex;
    justify-content: space-between;
    gap: 5px;
}

.top .show-info .buttons .green-btn {
    width: 50%;
}

.top .show-info .buttons .black-btn {
    width: 50%;
}

.top .info {
    padding: 9px 20px;
    background-color: #ffffff;
    color: #111212;
    margin-top: 26px;
}

.top p {
    line-height: 29px;
}

.top .green-btn {
    font-weight: bold;
}

.playground {
    width: 100%;
    margin: 0 auto;
    background: #000;
    flex-grow: 0.8;
    margin-top: 20px;
    border: 2px solid black;
}

.show-sentence .submitted-sentence {
    background: #000;
    color: #fff;
    padding: 8px;
    border-radius: 3px;
}

.show-sentence, .write-sentence, .playground .endgame {
    padding: 14px;
}

.playground .countdown {
    font-size: 40px;
}

.playground .users-sentence {
    width: 97%;
    font-size: 16px;
}

.playground .write-sentence, 
.playground .endgame, 
.playground .mistakes-counter {
    display: none;
}

.playground .mistakes-counter button {
    width: 100%;
    margin-top: 11px;
}

.playground .mistakes-counter input {
    width: 100%;
}

